--- a/styles.css
+++ b/styles.css
@@ -229,14 +229,26 @@ margin-top: 55px;
     text-align: left;
     
 }
+footer {
+    background-color: #222;
+    color: #fff;
+    padding: 2rem;
+}
+address {
+    display: flex;
+    flex-direction: column;
+    gap: 0.3rem;
+    align-items: flex-start;
+}
 address a {
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
-    color: darkblue;
-    font-size: 1.2rem;
+    color: #fff;
+    font-size: 1rem;
     font-style: normal;
     cursor: pointer;
+    margin: 0;
     transition: background-color 0.2s ease, color 0.2s ease, transform 0.2s ease; 
 }
 address a:hover {
@@ -249,8 +261,9 @@ address a:hover {
 address p {
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
-    font-size: 1.125rem;
+    font-size: 1.2rem;
     font-style: normal;
+    margin: 0;
 
 }
 @media (min-width: 768px) {
