--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body {
     font-weight: 500;
 }
 #header {
-    width: 100%;
+    width: 95%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -38,6 +38,7 @@ body {
     min-width: 320px;
     padding-top: 1rem;
     margin: 0 auto 2rem;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2)
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
 }
 #heading {
@@ -50,7 +51,7 @@ body {
 #header #header-img {
     max-width: 100%;    
     height: auto;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    
     display: block;
 border-radius: 10px;
 }
