--- a/styles.css
+++ b/styles.css
@@ -37,8 +37,9 @@ body {
     max-width: 1100px;
     min-width: 320px;
     padding-top: 1rem;
+    overflow-x: hidden;
     margin: 0 auto 2rem;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2)
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
 }
 #heading {
