--- a/styles.css
+++ b/styles.css
@@ -36,10 +36,10 @@ body {
     align-items: center;
     max-width: 1100px;
     min-width: 320px;
-    padding: 1rem 1rem 0;
+    padding: 1rem auto 0;
     overflow-x: hidden;
     margin: 0 auto 2rem;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0));
 }
 #heading {
@@ -60,9 +60,10 @@ border-radius: 10px;
     text-decoration: none;
     color: #fff;
     font-weight: 500;
-    transition: background-color 0.2s ease, color 0.2s ease;
+    transition: background-color 0.2s ease, color 0.2s ease, tranform 0.2s ease;
     font-size: 0.875rem;
     cursor: pointer;
+    padding: 10px 15px;
 }
 ul {
     list-style: none;
@@ -82,15 +83,16 @@ align-items: center;
     background-color: rgba(34, 34, 34, 0.85);
     color: #fff;
     z-index: 1000;
-    padding: 1rem 2rem;
+    padding-right: 1.5rem;
     overflow-x: hidden;
 }
 .nav-link:hover {
-    background-color: #1e4fd8;
+    
     color: #fff;
     border-radius: 3px;
     padding: 5px 10px;
-    
+    transform: scale(1.05);
+    background: rgba(0, 0, 0, 0.8);
 }
 li {
     margin: 0;
