--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
     line-height: 1.5;
     text-align: center;
     overflow-x: hidden;
+    outline: 2px solid red;
 }
 @font-face {
     font-family: 'Poppins', sans-serif;
@@ -309,6 +310,9 @@ address p {
     }
 }
 @media (max-width: 480px) {
+    #nav-bar {
+        padding: 0.5rem 1rem;
+    }
     #nav-bar ul {
         gap: 10px;
     }
