--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
     line-height: 1.5;
     text-align: center;
     overflow-x: hidden;
-    outline: 2px solid red;
+    
 }
 @font-face {
     font-family: 'Poppins', sans-serif;
@@ -36,7 +36,7 @@ body {
     flex-direction: column;
     align-items: center;
     max-width: 1100px;
-    min-width: 320px;
+    
     padding: 1rem auto 0;
     overflow-x: hidden;
     margin: 0 auto 2rem;
@@ -58,6 +58,7 @@ body {
 border-radius: 10px;
 }
 .nav-link {
+    max-width: 100%;
     text-decoration: none;
     color: #fff;
     font-weight: 500;
@@ -77,6 +78,7 @@ gap: 20px;
 align-items: center;
 }
 #nav-bar {
+    width: 100%;
     position: fixed;
     top: 0;
     left: 0;
@@ -84,7 +86,7 @@ align-items: center;
     background-color: rgba(34, 34, 34, 0.85);
     color: #fff;
     z-index: 1000;
-    padding: 0.5rem 1.5rem;
+    padding: 0.5rem 1rem;
     overflow-x: hidden;
 }
 .nav-link:hover {
@@ -106,7 +108,7 @@ li {
     align-items: center;
   width: 100%;
   max-width: 1100px;
-  min-width: 320px;
+  
   padding: 0 1rem;
   margin: 0 auto;  
 }
@@ -188,15 +190,15 @@ section p {
     
 }
 .video-form {
-    width: 90%;
+    width: 95%;
     max-width: 1100px;
-    min-width: 320px;
+    
     display: flex;
     flex-direction: column;
     gap: 30px;
    align-items: center;
    border-radius: 10px;
-   padding: 0 1rem;
+   padding: 1rem 1rem;
    background-color: rgba(0, 0, 0, 0.2);
    margin-top: 2rem auto 2rem;
    box-sizing: border-box; 
@@ -246,6 +248,7 @@ margin-top: 55px;
     background-color: #1e4fd8;
 }
 .form-text {
+    width: 100%;
     direction: ltr;
     text-align: center;
     font-size: 1rem;
@@ -259,8 +262,8 @@ margin-top: 55px;
     direction: ltr;
     text-align: left;
     max-width: 1100px;
-    min-width: 220px;
-    width: 98%;
+    
+    width: 100%;
 }
 footer {
     background-color: #222;
@@ -274,6 +277,7 @@ address {
     align-items: flex-start;
 }
 address a {
+    
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
@@ -292,6 +296,7 @@ address a:hover {
     padding: 5px 10px;
 }
 address p {
+    
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
     font-size: 1.2rem;
@@ -315,5 +320,10 @@ address p {
     }
     #nav-bar ul {
         gap: 10px;
+    }
+}
+@media (max-width: 400px) {
+    #nav-bar {
+        min-width: 0;
     }
 }
