--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,8 @@ align-items: center;
 #nav-bar {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+    gap: 20px;
     box-sizing: border-box;
     margin: 0;
     list-style: none;
@@ -97,6 +99,10 @@ align-items: center;
 #nav-bar li {
     flex-shrink: 1;
     min-width: 0;
+}
+#nav-bar li a {
+    display: block;
+    white-space: nowrap;
 }
 .nav-link:hover {
     
