--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body {
     font-weight: 500;
 }
 #header {
-    width: 100%;
+    width: 98%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -49,6 +49,7 @@ body {
     font-size: 2.5rem;
     text-align: center;
     padding-top: 30px;
+    margin-top: 60px;
 }
 #header #header-img {
     max-width: 98%;    
@@ -96,6 +97,7 @@ overflow: visible;
     margin: 0;
     list-style: none;
     width: 100%;
+    height: 60px;;
     position: fixed;
     top: 0;
     left: 0;
