--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ body {
 #header #header-img {
     max-width: 98%;    
     height: auto;
-    
+    padding: 0 1.8rem;
     display: block;
 border-radius: 10px;
 }
@@ -105,7 +105,7 @@ overflow: visible;
     background-color: rgba(34, 34, 34, 0.85);
     color: #fff;
     z-index: 1000;
-    padding: 0 1rem;
+    padding: 12px 0;
     overflow: visible;
 }
 #nav-bar li {
